@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.81">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.82">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -26,9 +26,10 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.81 [20230622]:
-- Added CountryOfOrigin filter to "Airing Anime Calendar"
-- Big Thanks to Pahiro for adding this filter.
+Changelog 0.3.82 [20230625]:
+- New service to monitor settings changes
+- Update global flag to indicate calendar requires a refresh
+- Added dbargs to refresh the calendar
     </news>
   </extension>
 </addon>
